// Geyser GRPC proto file for Solana Yellowstone
// Simplified version compatible with Tonic

syntax = "proto3";

package geyser;

// Commitment level
enum CommitmentLevel {
    PROCESSED = 0;
    CONFIRMED = 1;
    FINALIZED = 2;
}

// Subscription request
message SubscribeRequest {
    repeated SubscribeRequestFilterAccounts accounts = 1;
    repeated SubscribeRequestFilterAccounts accounts_data = 2;
    SubscribeRequestFilterSlots slots = 3;
    SubscribeRequestFilterTransactions transactions = 4;
    SubscribeRequestFilterBlocks blocks = 5;
    SubscribeRequestFilterBlocksMeta blocks_meta = 6;
    CommitmentLevel commitment = 7;
}

message SubscribeRequestFilterAccounts {
    string account = 1;
    repeated string owner = 2;
    repeated string filters = 3;
}

message SubscribeRequestFilterSlots {
    bool filter_by_commitment = 1;
}

message SubscribeRequestFilterTransactions {
    repeated string account_include = 1;
    repeated string account_exclude = 2;
    bool vote = 3;
    bool failed = 4;
    repeated string account_required = 5;
}

message SubscribeRequestFilterBlocks {
    repeated string account_include = 1;
    bool include_transactions = 2;
    bool include_accounts = 3;
    bool include_entries = 4;
}

message SubscribeRequestFilterBlocksMeta {
    repeated string account_include = 1;
}

// Subscription update
message SubscribeUpdate {
    repeated SubscribeUpdateAccount accounts = 1;
    SubscribeUpdateSlot slot = 2;
    SubscribeUpdateTransaction transaction = 3;
    SubscribeUpdateBlock block = 4;
    SubscribeUpdatePing ping = 5;
    SubscribeUpdateBlockMeta block_meta = 6;
    CommitmentLevel commitment = 7;
}

message SubscribeUpdateAccount {
    SubscribeUpdateAccountInfo account = 1;
    uint64 slot = 2;
    bool is_startup = 3;
}

message SubscribeUpdateAccountInfo {
    bytes pubkey = 1;
    uint64 lamports = 2;
    bytes owner = 3;
    bool executable = 4;
    uint64 rent_epoch = 5;
    bytes data = 6;
    uint64 write_version = 7;
    CommitmentLevel txn_signature = 8;
}

message SubscribeUpdateSlot {
    uint64 slot = 1;
    optional uint64 parent = 2;
    CommitmentLevel status = 3;
}

message SubscribeUpdateTransaction {
    SubscribeUpdateTransactionInfo transaction = 1;
    uint64 slot = 2;
}

message SubscribeUpdateTransactionInfo {
    bytes signature = 1;
    bool is_vote = 2;
    SubscribeUpdateTransactionInfoTransaction transaction = 3;
    SubscribeUpdateTransactionInfoMeta meta = 4;
    uint64 index = 5;
}

message SubscribeUpdateTransactionInfoTransaction {
    repeated bytes signatures = 1;
    SubscribeUpdateTransactionInfoTransactionMessage message = 2;
}

message SubscribeUpdateTransactionInfoTransactionMessage {
    SubscribeUpdateTransactionInfoTransactionMessageHeader header = 1;
    repeated bytes account_keys = 2;
    bytes recent_blockhash = 3;
    repeated SubscribeUpdateTransactionInfoTransactionMessageInstruction instructions = 4;
    bool versioned = 5;
    repeated bytes address_table_lookups = 6;
}

message SubscribeUpdateTransactionInfoTransactionMessageHeader {
    uint32 num_required_signatures = 1;
    uint32 num_readonly_signed_accounts = 2;
    uint32 num_readonly_unsigned_accounts = 3;
}

message SubscribeUpdateTransactionInfoTransactionMessageInstruction {
    uint32 program_id_index = 1;
    repeated uint32 accounts = 2;
    bytes data = 3;
}

message SubscribeUpdateTransactionInfoMeta {
    optional SubscribeUpdateTransactionInfoMetaErr err = 1;
    uint64 fee = 2;
    repeated uint64 pre_balances = 3;
    repeated uint64 post_balances = 4;
    repeated SubscribeUpdateTransactionInfoMetaInnerInstructions inner_instructions = 5;
    repeated string log_messages = 6;
    repeated SubscribeUpdateTransactionInfoMetaPreTokenBalances pre_token_balances = 7;
    repeated SubscribeUpdateTransactionInfoMetaPostTokenBalances post_token_balances = 8;
    repeated SubscribeUpdateTransactionInfoMetaRewards rewards = 9;
    optional bytes loaded_writable_addresses = 10;
    optional bytes loaded_readonly_addresses = 11;
    optional SubscribeUpdateTransactionInfoMetaReturnData return_data = 12;
    optional uint64 compute_units_consumed = 13;
}

message SubscribeUpdateTransactionInfoMetaErr {
    string err = 1;
}

message SubscribeUpdateTransactionInfoMetaInnerInstructions {
    uint32 index = 1;
    repeated SubscribeUpdateTransactionInfoTransactionMessageInstruction instructions = 2;
}

message SubscribeUpdateTransactionInfoMetaPreTokenBalances {
    uint32 account_index = 1;
    string mint = 2;
    SubscribeUpdateTransactionInfoMetaTokenAmount ui_token_amount = 3;
    string owner = 4;
    string program_id = 5;
}

message SubscribeUpdateTransactionInfoMetaPostTokenBalances {
    uint32 account_index = 1;
    string mint = 2;
    SubscribeUpdateTransactionInfoMetaTokenAmount ui_token_amount = 3;
    string owner = 4;
    string program_id = 5;
}

message SubscribeUpdateTransactionInfoMetaTokenAmount {
    string ui_amount = 1;
    uint32 decimals = 2;
    string amount = 3;
    string ui_amount_string = 4;
}

message SubscribeUpdateTransactionInfoMetaRewards {
    bytes pubkey = 1;
    int64 lamports = 2;
    optional uint64 post_balance = 3;
    optional SubscribeUpdateTransactionInfoMetaRewardType reward_type = 4;
    optional string commission = 5;
}

message SubscribeUpdateTransactionInfoMetaReturnData {
    bytes program_id = 1;
    bytes data = 2;
}

message SubscribeUpdateBlock {
    uint64 slot = 1;
    string blockhash = 2;
    repeated SubscribeUpdateBlockRewards rewards = 3;
    optional uint64 block_time = 4;
    optional uint64 block_height = 5;
    uint64 parent_slot = 6;
    optional uint64 parent_blockhash = 7;
    optional uint64 previous_blockhash = 8;
    repeated SubscribeUpdateTransactionInfo transactions = 9;
    repeated SubscribeUpdateAccountInfo accounts = 10;
    repeated SubscribeUpdateBlockEntries entries = 11;
}

message SubscribeUpdateBlockRewards {
    bytes pubkey = 1;
    int64 lamports = 2;
    optional uint64 post_balance = 3;
    optional SubscribeUpdateTransactionInfoMetaRewardType reward_type = 4;
    optional string commission = 5;
}

enum SubscribeUpdateTransactionInfoMetaRewardType {
    UNSPECIFIED = 0;
    FEE = 1;
    RENT = 2;
    STAKING = 3;
    VOTING = 4;
}

message SubscribeUpdateBlockEntries {
    uint32 index = 1;
    uint32 num_hashes = 2;
    bytes hash = 3;
    uint64 executed_transaction_count = 4;
    uint64 starting_transaction_index = 5;
}

message SubscribeUpdateBlockMeta {
    uint64 slot = 1;
    string blockhash = 2;
    repeated SubscribeUpdateBlockRewards rewards = 3;
    optional uint64 block_time = 4;
    optional uint64 block_height = 5;
    uint64 parent_slot = 6;
    optional uint64 parent_blockhash = 7;
    optional uint64 previous_blockhash = 8;
}

message SubscribeUpdatePing {
}

// Geyser service
service Geyser {
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeUpdate);
    rpc Ping(SubscribeUpdatePing) returns (SubscribeUpdatePing);
}

